# ocaml-ternary-search-tree

./: LICENSE.txt  ternary_search_tree.opam
src/: .merlin  jbuild  ternary_search_tree.ml  ternary_search_tree.mli
test/: .merlin  jbuild  tst_test.ml
